device alignment issue

--- a/src/app/components/signins/signins.component.scss
+++ b/src/app/components/signins/signins.component.scss
@@ -18,6 +18,10 @@
   }
 }
 
+fs-device-os {
+  display: inline-block;
+}
+
 .verification-popover {
   text-align: center;
 }
